derive/tests/ui/pubsub/missing-subscribe.stderr
error: subscription 'hello'. Can't find subscribe method, expected a method annotated with `subscribe` e.g. `#[pubsub(subscription = "hello", subscribe, name = "hello_subscribe")]`
  --> $DIR/missing-subscribe.rs:12:2
   |
12 |       /// Unsubscribe from hello subscription.
   |  _____^
13 | |     #[pubsub(subscription = "hello", unsubscribe, name = "hello_unsubscribe")]
14 | |     fn unsubscribe(&self, _: Option<Self::Metadata>, _: SubscriptionId) -> Result<bool>;
   | |________________________________________________________________________________________^

error: aborting due to previous error

